@@ -1,3 +1,4 @@
+* Allow to manipulate aeat.340.record to account group members
 * Remove accents and convert strint to upper case when generate file
 
 Version 3.4.5 - 2015-12-23
